--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-Flaskp
-python-dotenv
-psycopg2-binary
-requests
-yookassa
-vk-api
-gunicorn
-pytest
-pytest-cov
+Flask==2.3.3
+python-dotenv==1.0.0
+psycopg2-binary==2.9.7
+requests==2.31.0
+yookassa==3.0.0
+vk-api==11.9.9
+gunicorn==21.2.0
+pytest==7.4.0
+pytest-cov==4.1.0
